CRUD for Supplier

--- a/GroceryFinal/Views/Shared/_Layout.cshtml
+++ b/GroceryFinal/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                                 <li><a class="dropdown-item" asp-area="" asp-controller="Masters" asp-action="UOM">UOM</a></li>
                                 <li><a class="dropdown-item" asp-area="" asp-controller="Product" asp-action="Index">Product</a></li>
                                 <li><a class="dropdown-item" asp-area="" asp-controller="CustomerDetails" asp-action="Index">Customer Details</a></li>
-                                <li><a class="dropdown-item" asp-area="" asp-controller="SupplierDetails" asp-action="Index">Supplier</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="Supplier" asp-action="Index">Supplier</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
