--- a/GroceryFinal/Views/Product/Index.cshtml
+++ b/GroceryFinal/Views/Product/Index.cshtml
@@ -9,7 +9,7 @@
             </h2>
         </div>
         <div class="col-6 text-end">
-            <a asp-controller="Product" asp-action="Create" class="btn btn-primary">
+            <a asp-controller="Product" asp-action="Upsert" class="btn btn-primary">
                 <i class="bi bi-plus-circle"></i> Create New Product
             </a>
         </div>
@@ -32,6 +32,7 @@
         <th>Selling Stock</th>
         <th>Reorder Level</th>
         <th>Reorder Quantity</th>
+        <th>Supplier ID and Name</th>
         <th></th>
     </tr>
     </thead>
@@ -49,9 +50,10 @@
                 <td>@obj.SellingStock</td>
                 <td>@obj.ReorderLevel</td>
                 <td>@obj.Quantity</td>
+                <td>@obj.SupplierId - @obj.Supplier.SupplierName</td>
                 <td>
                     <div class="w-75 btn-group" role="group">
-                        <a asp-controller="Product" asp-action="Edit" asp-route-id="@obj.ProductId" class="btn btn-primary mx-2">
+                        <a asp-controller="Product" asp-action="Upsert" asp-route-id="@obj.ProductId" class="btn btn-primary mx-2">
                                 <i class="bi bi-pencil-square"></i> Edit
                         </a>
                             <a asp-controller="Product" asp-action="Delete" asp-route-id="@obj.ProductId" class="btn btn-danger mx-2">
