--- a/GroceryFinal/Views/_ViewImports.cshtml
+++ b/GroceryFinal/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using GroceryFinal
 @using GroceryFinal.Models
+@using GroceryFinal.Model.ViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
