Added UOMForeign Key, Minor fixes

--- a/GroceryFinal/Views/Product/Delete.cshtml
+++ b/GroceryFinal/Views/Product/Delete.cshtml
@@ -13,8 +13,8 @@
             <input asp-for="ProductName" disabled class="form-control" />
         </div>
         <div class="mb-3 row p-1">
-            <label asp-for="UOM" class="p-0"></label>
-            <input asp-for="UOM" disabled class="form-control" />
+            <label asp-for="UOMId" class="p-0"></label>
+            <input asp-for="UOMId" disabled class="form-control" />
         </div>
         <div class="mb-3 row p-1">
             <label asp-for="PurchaseRate" class="p-0"></label>
