--- a/GroceryFinal/Views/Product/Index.cshtml
+++ b/GroceryFinal/Views/Product/Index.cshtml
@@ -42,7 +42,7 @@
             <tr>
                 <td>@obj.ProductId</td>
                 <td>@obj.ProductName</td>
-                <td>@obj.UOM</td>
+                <td>@obj.UOMId - @obj.UOM.UOMName</td>
                 <td>@obj.PurchaseRate</td>
                 <td>@obj.SellingRate</td>
                 <td>@obj.Stock</td>
