--- a/GroceryFinal/Views/Shared/_Layout.cshtml
+++ b/GroceryFinal/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="mastersDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Masters</a>
                             <ul class="dropdown-menu" aria-labelledby="mastersDropdown">
-                                <li><a class="dropdown-item" asp-area="" asp-controller="States" asp-action="Index">State</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="State" asp-action="Index">State</a></li>
                                 <li><a class="dropdown-item" asp-area="" asp-controller="UOM" asp-action="Index">UOM</a></li>
                                 <li><a class="dropdown-item" asp-area="" asp-controller="Product" asp-action="Index">Product</a></li>
                                 <li><a class="dropdown-item" asp-area="" asp-controller="CustomerDetails" asp-action="Index">Customer Details</a></li>
