--- a/GroceryFinal/Views/Shared/_Layout.cshtml
+++ b/GroceryFinal/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@using GroceryFinal.Utility
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -23,6 +25,8 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav me-auto">
+                        @if(User.IsInRole(SD.Role_Admin))
+                        {                     
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="mastersDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Masters</a>
                             <ul class="dropdown-menu" aria-labelledby="mastersDropdown">
@@ -33,6 +37,7 @@
                                 <li><a class="dropdown-item" asp-area="" asp-controller="Supplier" asp-action="Index">Supplier</a></li>
                             </ul>
                         </li>
+                        }
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Transactions" asp-action="Index">Transactions</a>
                         </li>
