Final Touch ups

--- a/GroceryFinal/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/GroceryFinal/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -5,7 +5,7 @@
     }
     else
     {
-        Layout = "/View/Shared/_Layout.cshtml";
+        Layout = "/Views/Shared/_Layout.cshtml";
     }
 }
 
