--- a/GroceryFinal/Views/Product/Upsert.cshtml
+++ b/GroceryFinal/Views/Product/Upsert.cshtml
@@ -1,90 +1,103 @@
 ﻿@model ProductVM
 
-<form method="post">
-    <input asp-for="Product.ProductId" hidden />
-    <div class="border p-3 mt-4">
-        <div class="row pb-2">
-            <h2 class="text-primary">@(Model.Product.ProductId!=0?"Update":"Create")</h2>
-            </hr>
-        </div>
-        <div class="mb-3 row p-1">
-            <label asp-for="Product.ProductName" class="p-0"></label>
-            <input asp-for="Product.ProductName" class="form-control" />
-            <span asp-validation-for="Product.ProductName" class="text-danger"></span>
-        </div>
-        <div class="mb-3 row p-1">
-            <label asp-for="Product.UOMId" class="p-0"></label>
-            <select asp-for="Product.UOMId" asp-items="@Model.UOMList" class="form-select">
-                <option disabled selected>Select UOM</option>
-            </select>
-            <span asp-validation-for="Product.UOMId" class="text-danger"></span>
-        </div>
-        <div class="mb-3 row p-1">
-            <label asp-for="Product.PurchaseRate" class="p-0"></label>
-            <input asp-for="Product.PurchaseRate" class="form-control" />
-            <span asp-validation-for="Product.PurchaseRate" class="text-danger"></span>
-        </div>
-        <div class="mb-3 row p-1">
-            <label asp-for="Product.SellingRate" class="p-0"></label>
-            <input asp-for="Product.SellingRate" class="form-control" />
-            <span asp-validation-for="Product.SellingRate" class="text-danger"></span>
-        </div>
-        <div class="mb-3 row p-1">
-            <label asp-for="Product.Stock" class="p-0"></label>
-            <input asp-for="Product.Stock" class="form-control" />
-            <span asp-validation-for="Product.Stock" class="text-danger"></span>
-        </div>
-        <div class="mb-3 row p-1">
-            <label asp-for="Product.PurchaseStock" class="p-0"></label>
-            <input asp-for="Product.PurchaseStock" class="form-control" />
-            <span asp-validation-for="Product.PurchaseStock" class="text-danger"></span>
-        </div>
-        <div class="mb-3 row p-1">
-            <label asp-for="Product.SellingStock" class="p-0"></label>
-            <input asp-for="Product.SellingStock" class="form-control" />
-            <span asp-validation-for="Product.SellingStock" class="text-danger"></span>
-        </div>
-        <div class="mb-3 row p-1">
-            <label asp-for="Product.ReorderLevel" class="p-0"></label>
-            <input asp-for="Product.ReorderLevel" class="form-control" />
-            <span asp-validation-for="Product.ReorderLevel" class="text-danger"></span>
-        </div>
-        <div class="mb-3 row p-1">
-            <label asp-for="Product.Quantity" class="p-0"></label>
-            <input asp-for="Product.Quantity" class="form-control" />
-            <span asp-validation-for="Product.Quantity" class="text-danger"></span>
-        </div>
-        <div class="mb-3 row p-1">
-            <label asp-for="Product.SupplierId" class="p-0"></label>
-            <select asp-for="Product.SupplierId" asp-items="@Model.SupplierList" class="form-select">
-                <option disabled selected>Select Supplier</option>
-            </select>
-            <span asp-validation-for="Product.SupplierId" class="text-danger"></span>
-        </div>
-
+<div class="card shadow border-0 mt-4">
+    <div class="card-header bg-secondary bg-gardient ml-0 py-3">
         <div class="row">
-            <div class="col-6 col-md-3">
-                @if(Model.Product.ProductId != 0)
-                {
-                    <button type="submit" class="btn btn-primary form-control">Update</button>
-
-                }
-                else
-                {
-                    <button type="submit" class="btn btn-primary form-control">Create</button>
-
-                }
-
-            </div>
-            <div class="col-6 col-md-3">
-                <a asp-controller="Product" asp-action="Index" class="btn btn-outline-secondary border form-control">
-                    Cancel
-                </a>
+            <div class="col-12 text-center">
+                <h2 class="text-white">@(Model.Product.ProductId != 0 ? "Update Product" : "Create New Product")</h2>
             </div>
         </div>
-        
     </div>
-</form>
+    <div class="card-body p-4">
+        <form method="post">
+            <input asp-for="Product.ProductId" hidden />
+            <div class="border p-3 mt-4">
+                <div class="row pb-2">
+                </div>
+                <div class="mb-3 row p-1">
+                    <label asp-for="Product.ProductName" class="p-0"></label>
+                    <input asp-for="Product.ProductName" class="form-control" />
+                    <span asp-validation-for="Product.ProductName" class="text-danger"></span>
+                </div>
+                <div class="mb-3 row p-1">
+                    <label asp-for="Product.UOMId" class="p-0"></label>
+                    <select asp-for="Product.UOMId" asp-items="@Model.UOMList" class="form-select">
+                        <option disabled selected>Select UOM</option>
+                    </select>
+                    <span asp-validation-for="Product.UOMId" class="text-danger"></span>
+                </div>
+                <div class="mb-3 row p-1">
+                    <label asp-for="Product.PurchaseRate" class="p-0"></label>
+                    <input asp-for="Product.PurchaseRate" class="form-control" />
+                    <span asp-validation-for="Product.PurchaseRate" class="text-danger"></span>
+                </div>
+                <div class="mb-3 row p-1">
+                    <label asp-for="Product.SellingRate" class="p-0"></label>
+                    <input asp-for="Product.SellingRate" class="form-control" />
+                    <span asp-validation-for="Product.SellingRate" class="text-danger"></span>
+                </div>
+                <div class="mb-3 row p-1">
+                    <label asp-for="Product.Stock" class="p-0"></label>
+                    <input asp-for="Product.Stock" class="form-control" />
+                    <span asp-validation-for="Product.Stock" class="text-danger"></span>
+                </div>
+                <div class="mb-3 row p-1">
+                    <label asp-for="Product.PurchaseStock" class="p-0"></label>
+                    <input asp-for="Product.PurchaseStock" class="form-control" />
+                    <span asp-validation-for="Product.PurchaseStock" class="text-danger"></span>
+                </div>
+                <div class="mb-3 row p-1">
+                    <label asp-for="Product.SellingStock" class="p-0"></label>
+                    <input asp-for="Product.SellingStock" class="form-control" />
+                    <span asp-validation-for="Product.SellingStock" class="text-danger"></span>
+                </div>
+                <div class="mb-3 row p-1">
+                    <label asp-for="Product.ReorderLevel" class="p-0"></label>
+                    <input asp-for="Product.ReorderLevel" class="form-control" />
+                    <span asp-validation-for="Product.ReorderLevel" class="text-danger"></span>
+                </div>
+                <div class="mb-3 row p-1">
+                    <label asp-for="Product.Quantity" class="p-0"></label>
+                    <input asp-for="Product.Quantity" class="form-control" />
+                    <span asp-validation-for="Product.Quantity" class="text-danger"></span>
+                </div>
+                <div class="mb-3 row p-1">
+                    <label asp-for="Product.SupplierId" class="p-0"></label>
+                    <select asp-for="Product.SupplierId" asp-items="@Model.SupplierList" class="form-select">
+                        <option disabled selected>Select Supplier</option>
+                    </select>
+                    <span asp-validation-for="Product.SupplierId" class="text-danger"></span>
+                </div>
+
+                <div class="row">
+                    <div class="col-6 col-md-3">
+                        @if (Model.Product.ProductId != 0)
+                        {
+                            <button type="submit" class="btn btn-primary form-control">Update</button>
+
+                        }
+                        else
+                        {
+                            <button type="submit" class="btn btn-primary form-control">Create</button>
+
+                        }
+
+                    </div>
+                    <div class="col-6 col-md-3">
+                        <a asp-controller="Product" asp-action="Index" class="btn btn-outline-secondary border form-control">
+                            Cancel
+                        </a>
+                    </div>
+                </div>
+
+            </div>
+        </form>
+    </div>
+</div>
+
+
+
+
 
 
 @section Scripts {
@@ -92,3 +105,5 @@
         <partial name="_ValidationScriptsPartial" />
     }
 }
+
+
