--- a/GroceryFinal/Views/CustomerDetails/Create.cshtml
+++ b/GroceryFinal/Views/CustomerDetails/Create.cshtml
@@ -17,66 +17,75 @@
     };
 }
 
-
-<form method="post">
-    <div class="border p-3 mt-4">
-        <div class="row pb-2">
-            <h2 class="text-primary">Create Customer</h2>
-            </hr>
-        </div>
-        <div class="mb-3 row p-1">
-            <label asp-for="CustomerName" class="p-0"></label>
-            <input asp-for="CustomerName"  class="form-control" />
-            <span asp-validation-for="CustomerName" class="text-danger"></span>
-        </div>
-        <div class="mb-3 row p-1">
-            <label asp-for="CustomerAddress" class="p-0"></label>
-            <input asp-for="CustomerAddress"  class="form-control" />
-            <span asp-validation-for="CustomerAddress" class="text-danger"></span>
-        </div>
-        <div class="mb-3 row p-1">
-            <label asp-for="CustomerAddress2" class="p-0"></label>
-            <input asp-for="CustomerAddress2"  class="form-control" />
-            <span asp-validation-for="CustomerAddress2" class="text-danger"></span>
-        </div>
-        <div class="mb-3 row p-1">
-            <label asp-for="CustomerCity" class="p-0"></label>
-            @Html.DropDownListFor(model => model.CustomerCity, new SelectList(indianCities), "Select City", new { @class = "form-control" })
-        </div>
-        <div class="mb-3 row p-1">
-            <label asp-for="CustomerState" class="p-0"></label>
-            @Html.DropDownListFor(model => model.CustomerState, new SelectList(indianStates), "Select State", new { @class = "form-control" })
-        </div>
-        <div class="mb-3 row p-1">
-            <label asp-for="CustomerZipCode" class="p-0"></label>
-            <input asp-for="CustomerZipCode"  class="form-control" />
-            <span asp-validation-for="CustomerZipCode" class="text-danger"></span>
-        </div>
-        <div class="mb-3 row p-1">
-            <label asp-for="CustomerPhone" class="p-0"></label>
-            <input asp-for="CustomerPhone"  class="form-control" />
-            <span asp-validation-for="CustomerPhone" class="text-danger"></span>
-        </div>
-        <div class="mb-3 row p-1">
-            <label asp-for="CustomerEmail" class="p-0"></label>
-            <input asp-for="CustomerEmail"  class="form-control" />
-            <span asp-validation-for="CustomerEmail" class="text-danger"></span>
-        </div>
-
+<div class="card shadow border-0 mt-4">
+    <div class="card-header bg-secondary bg-gardient ml-0 py-3">
         <div class="row">
-            <div class="col-6 col-md-3">
-                <button type="submit" class="btn btn-primary form-control" >Create</button>
-
-            </div>
-            <div class="col-6 col-md-3">
-                <a asp-controller="CustomerDetails" asp-action="Index" class="btn btn-outline-secondary border form-control">
-                    Cancel
-                </a>
+            <div class="col-12 text-center">
+                <h2 class="text-white py-2">Create Customer</h2>
             </div>
         </div>
-        
     </div>
-</form>
+    <div class="card-body p-4">
+        <form method="post" class="row">
+            <div class="border p-3 mt-4">
+                <div class="mb-3 row p-1">
+                    <label asp-for="CustomerName" class="p-0"></label>
+                    <input asp-for="CustomerName" class="form-control" />
+                    <span asp-validation-for="CustomerName" class="text-danger"></span>
+                </div>
+                <div class="mb-3 row p-1">
+                    <label asp-for="CustomerAddress" class="p-0"></label>
+                    <input asp-for="CustomerAddress" class="form-control" />
+                    <span asp-validation-for="CustomerAddress" class="text-danger"></span>
+                </div>
+                <div class="mb-3 row p-1">
+                    <label asp-for="CustomerAddress2" class="p-0"></label>
+                    <input asp-for="CustomerAddress2" class="form-control" />
+                    <span asp-validation-for="CustomerAddress2" class="text-danger"></span>
+                </div>
+                <div class="mb-3 row p-1">
+                    <label asp-for="CustomerCity" class="p-0"></label>
+                    @Html.DropDownListFor(model => model.CustomerCity, new SelectList(indianCities), "Select City", new { @class = "form-control" })
+                </div>
+                <div class="mb-3 row p-1">
+                    <label asp-for="CustomerState" class="p-0"></label>
+                    @Html.DropDownListFor(model => model.CustomerState, new SelectList(indianStates), "Select State", new { @class = "form-control" })
+                </div>
+                <div class="mb-3 row p-1">
+                    <label asp-for="CustomerZipCode" class="p-0"></label>
+                    <input asp-for="CustomerZipCode" class="form-control" />
+                    <span asp-validation-for="CustomerZipCode" class="text-danger"></span>
+                </div>
+                <div class="mb-3 row p-1">
+                    <label asp-for="CustomerPhone" class="p-0"></label>
+                    <input asp-for="CustomerPhone" class="form-control" />
+                    <span asp-validation-for="CustomerPhone" class="text-danger"></span>
+                </div>
+                <div class="mb-3 row p-1">
+                    <label asp-for="CustomerEmail" class="p-0"></label>
+                    <input asp-for="CustomerEmail" class="form-control" />
+                    <span asp-validation-for="CustomerEmail" class="text-danger"></span>
+                </div>
+
+                <div class="row">
+                    <div class="col-6 col-md-3">
+                        <button type="submit" class="btn btn-primary form-control">Create</button>
+
+                    </div>
+                    <div class="col-6 col-md-3">
+                        <a asp-controller="CustomerDetails" asp-action="Index" class="btn btn-outline-primary border form-control">
+                            Cancel
+                        </a>
+                    </div>
+                </div>
+
+            </div>
+        </form>
+    </div>
+</div>
+
+
+
 
 
 @section Scripts {
