--- a/GroceryFinal/Views/UOM/Create.cshtml
+++ b/GroceryFinal/Views/UOM/Create.cshtml
@@ -1,31 +1,42 @@
 ﻿@using GroceryFinal.Model
 @model UOM
 
-<form method="post">
-    <div class="border p-3 mt-4">
-        <div class="row pb-2">
-            <h2 class="text-primary">Create UOM</h2>
-            </hr>
-        </div>
-        <div class="mb-3 row p-1">
-            <label asp-for="UOMName" class="p-0"></label>
-            <input asp-for="UOMName"  class="form-control" />
-            <span asp-validation-for="UOMName" class="text-danger"></span>
-        </div>
+
+<div class="card shadow border-0 mt-4">
+    <div class="card-header bg-secondary bg-gardient ml-0 py-3">
         <div class="row">
-            <div class="col-6 col-md-3">
-                <button type="submit" class="btn btn-primary form-control" >Create</button>
+            <div class="col-12 text-center">
+                <h2 class="text-white py-2">Create UOM</h2>
+            </div>
+        </div>
+    </div>
+    <div class="card-body p-4">
+        <form method="post">
+            <div class="border p-3 mt-4">
+                <div class="mb-3 row p-1">
+                    <label asp-for="UOMName" class="p-0"></label>
+                    <input asp-for="UOMName" class="form-control" />
+                    <span asp-validation-for="UOMName" class="text-danger"></span>
+                </div>
+                <div class="row">
+                    <div class="col-6 col-md-3">
+                        <button type="submit" class="btn btn-primary form-control">Create</button>
+
+                    </div>
+                    <div class="col-6 col-md-3">
+                        <a asp-controller="UOM" asp-action="Index" class="btn btn-outline-secondary border form-control">
+                            Cancel
+                        </a>
+                    </div>
+                </div>
 
             </div>
-            <div class="col-6 col-md-3">
-                <a asp-controller="UOM" asp-action="Index" class="btn btn-outline-secondary border form-control">
-                    Cancel
-                </a>
-            </div>
-        </div>
-        
+        </form>
     </div>
-</form>
+</div>
+
+
+
 
 
 @section Scripts {
