--- a/GroceryFinal/Views/UOM/Delete.cshtml
+++ b/GroceryFinal/Views/UOM/Delete.cshtml
@@ -1,29 +1,40 @@
 ﻿@using GroceryFinal.Model
 @model UOM
 
-<form method="post">
-    <input asp-for="UOMId" hidden />
-    <div class="border p-3 mt-4">
-        <div class="row pb-2">
-            <h2 class="text-primary">Delete UOM</h2>
-            </hr>
-        </div>
-        <div class="mb-3 row p-1">
-            <label asp-for="UOMName" class="p-0"></label>
-            <input asp-for="UOMName" disabled class="form-control" />
-        </div>
+<div class="card shadow border-0 mt-4">
+    <div class="card-header bg-secondary bg-gardient ml-0 py-3">
         <div class="row">
-            <div class="col-6 col-md-3">
-                <button type="submit" class="btn btn-danger form-control">Delete</button>
-
-            </div>
-            <div class="col-6 col-md-3">
-                <a asp-controller="UOM" asp-action="Index" class="btn btn-outline-secondary border form-control">
-                    Cancel
-                </a>
+            <div class="col-12 text-center">
+                <h2 class="text-white py-2">Delete UOM</h2>
             </div>
         </div>
-
     </div>
-</form>
+    <div class="card-body p-4">
+        <form method="post">
+            <input asp-for="UOMId" hidden />
+            <div class="border p-3 mt-4">
+                <div class="mb-3 row p-1">
+                    <label asp-for="UOMName" class="p-0"></label>
+                    <input asp-for="UOMName" disabled class="form-control" />
+                </div>
+                <div class="row">
+                    <div class="col-6 col-md-3">
+                        <button type="submit" class="btn btn-danger form-control">Delete</button>
+
+                    </div>
+                    <div class="col-6 col-md-3">
+                        <a asp-controller="UOM" asp-action="Index" class="btn btn-outline-secondary border form-control">
+                            Cancel
+                        </a>
+                    </div>
+                </div>
+
+            </div>
+        </form>
+    </div>
+</div>
+
+
+
+
 
